--- a/examples/array.html
+++ b/examples/array.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html>
 <head>
-	<title>Simple Autocomplete Example</title>
+	<title>Autocomplete Example via PHP - Array</title>
 	<style type"text/css">
 		ul.autocomplete {
 			list-style-type: none;
@@ -25,8 +25,8 @@
 	</style>
 </head>
 <body>
-<script src="autocomplete.js" type="text/javascript"></script>
-<script type="text/javascript">var url = 'examples/simple-example-mysql.php?phrase=';</script>
+<script src="../autocomplete.js" type="text/javascript"></script>
+<script type="text/javascript">var url = 'array.php?phrase=';</script>
 <div id="field"><input id="phrase" onkeyup="sndReqPhrase('phrase', 'suggestion')" maxlength="30" name="phrase" size="35" type="text" /></div>
 <div id="suggestion"></div>
 </div>
